<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zero Day News</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_action_bar">Activity_action_bar</string>
    <string name="displayArticles">Display Article Feeds</string>
    <string name="displayRSS">Display RSS Feeds</string>
    <string name="displayReddit">Display Reddit Feeds</string>
    <string name="addNewFeed">Add New Feed</string>
    <color name="lightblue">#009dde</color>
    <string name="configureRssFeeds">Configure RSS Feeds</string>
    <string name="configureRedditFeeds">Configure Reddit Feeds</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_addFeed">Add Feed</string>
    <string name="action_configureFeeds">Configure Feeds</string>
    <string name="action_help">Help</string>
    <string name="action_saveFeed">Save Feed</string>
    <string name="action_loadFeed">Load Feed</string>
    <string name="help_text_1">Welcome to Zero Day News</string>
    <string name="help_text_2">View Different Feeds By Clicking "Display Article Feeds"</string>
    <string name="help_text_3">Add and Switch Feeds On/Off via the Other Buttons</string>
    <string name="help_text_4">Feeds Can Also Be Saved/Loaded via the Dropdown Menu Above</string>

</resources>