<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/action_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_action_refresh" />
    
    <item
        android:id="@+id/action_addFeed"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_addFeed"/>
    
    <item
        android:id="@+id/action_configureFeeds"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_configureFeeds"/>
    
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_help"/>
        
    <item
        android:id="@+id/action_saveFeed"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_saveFeed"/>
        
    <item
        android:id="@+id/action_loadFeed"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_loadFeed"/>

</menu>